scrollbar fix

--- a/src/app.css
+++ b/src/app.css
@@ -24,11 +24,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-display: flex;
-justify-content: center;
-}
-* {
-
+  display: flex;
+  justify-content: center;
 }
 
 html {
